// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<li
  className="MuiButtonBase-root-17 MuiListItem-root-7 MuiListItem-default-10 MuiListItem-gutters-14 MuiListItem-button-15 MuiMenuItem-root-5"
  color="inherit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemText-root-20"
  >
    <h3
      className="MuiTypography-root-26 MuiTypography-subheading-33 MuiListItemText-primary-23"
    >
      Shop
    </h3>
  </div>
  <span
    className="MuiTouchRipple-root-50"
  />
</li>
`;

exports[`snapshot with related items 1`] = `
<li
  className="MuiButtonBase-root-17 MuiListItem-root-7 MuiListItem-default-10 MuiListItem-gutters-14 MuiListItem-button-15 MuiMenuItem-root-5"
  color="inherit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemText-root-20"
  >
    <h3
      className="MuiTypography-root-26 MuiTypography-subheading-33 MuiListItemText-primary-23"
    >
      Shop
    </h3>
  </div>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-58 MuiListItemIcon-root-57"
    color={undefined}
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
    />
  </svg>
  <span
    className="MuiTouchRipple-root-50"
  />
</li>
`;
